option('arb_with_assertions',   type: 'boolean', value: false)
option('arb_with_bundled_libs', type: 'boolean', value: false)
option('arb_with_mpi',          type: 'boolean', value: false)
option('arb_with_gpu',          type: 'boolean', value: false)
option('arb_with_neuroml',      type: 'boolean', value: false)
option('arb_with_profiling',    type: 'boolean', value: false)
option('arb_with_vectorize',    type: 'boolean', value: false)
option('arb_with_python',       type: 'boolean', value: false)

option('arb_arch', type: 'string', value: 'native')
