[project]
name = "arbor"
version = "0.9.1-dev" # TODO: make dependent on VERSION file. Blocked by https://github.com/scikit-build/scikit-build-core/issues/230
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
description = "High performance simulation of networks of multicompartment neurons."
requires-python = ">=3.7"
keywords = ["simulator", "neuroscience", "morphological detail", "HPC", "GPU", "C++"]
authors = [
    {name = "Arbor Dev Team", email = "contact@arbor-sim.org"}
]
maintainers = [
    {name = "Arbor Dev Team", email = "contact@arbor-sim.org"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++"
]
dependencies = [
    "numpy"
]

[project.scripts]
modcc = "arbor:modcc"
arbor-build-catalogue = "arbor:build_catalogue"

[tool.scikit-build]
cmake.args = [
        "-DARB_WITH_PYTHON=ON",
        "-DARB_USE_BUNDLED_LIBS=ON",
]
wheel.install-dir = "arbor"
wheel.packages = []

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude='^/(ext|doc/scripts/.*_theme|doc/scripts/inputs.py)'

[project.urls]
homepage = "https://arbor-sim.org"
documentation = "https://docs.arbor-sim.org"
repository = "https://github.com/arbor-sim/arbor"
changelog = "https://github.com/arbor-sim/arbor/releases"

[build-system]
requires = [
    "scikit-build-core",
]
build-backend = "scikit_build_core.build"

[tool.cibuildwheel]
build-frontend = "build"
build = ["*linux*","*macosx*"]
skip = ["cp36*", "*musllinux*"]
test-command = "python -m unittest discover -v -s {project}/python"
test-skip = "cp312*"
dependency-versions = "latest"

[tool.cibuildwheel.macos]
archs = ["universal2"]

[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.15"

[tool.cibuildwheel.linux]
archs = ["x86_64"]

[[tool.cibuildwheel.overrides]]
select = "*-musllinux*"
#TBD
