[project]
name = "arbor"
dynamic = ["version"]
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
description = "High performance simulation of networks of multicompartment neurons."
requires-python = ">=3.9"
keywords = ["simulator", "neuroscience", "morphological detail", "HPC", "GPU", "C++"]
authors = [
    {name = "Arbor Dev Team", email = "contact@arbor-sim.org"}
]
maintainers = [
    {name = "Arbor Dev Team", email = "contact@arbor-sim.org"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++"
]
dependencies = [
    "numpy"
]

[project.scripts]
modcc = "arbor:modcc"
arbor-build-catalogue = "arbor:build_catalogue"

[tool.scikit-build]
cmake.args = [
        "-DARB_WITH_PYTHON=ON",
]
sdist.include = ["ext/*/.git"]
wheel.install-dir = "arbor"
wheel.packages = []

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "VERSION"
regex = "(?P<value>\\d+\\.\\d+\\.\\d+(-.+)?)"

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude='^/(_deps|ext|doc/scripts/.*_theme|doc/scripts/inputs.py)'

[project.urls]
homepage = "https://arbor-sim.org"
documentation = "https://docs.arbor-sim.org"
repository = "https://github.com/arbor-sim/arbor"
changelog = "https://github.com/arbor-sim/arbor/releases"

[build-system]
requires = [
    "scikit-build-core",
    "numpy",
    "pybind11-stubgen",
]
build-backend = "scikit_build_core.build"

[tool.cibuildwheel]
build-frontend = "build"
build = ["*linux*","*macosx*"]
skip = ["cp36*", "cp37*", "cp38*", "*musllinux*"]
test-command = "python -m unittest discover -v -s {project}/python"
dependency-versions = "latest"

[tool.cibuildwheel.macos]
#archs = ["universal2"]
archs = ["arm64", "x86_64"]
environment = { MACOSX_DEPLOYMENT_TARGET = "12.0.1" }

[tool.cibuildwheel.linux]
archs = ["x86_64"]

[[tool.cibuildwheel.overrides]]
select = "*-musllinux*"
#TBD
